--- a/speech_to_text/pubspec.yaml
+++ b/speech_to_text/pubspec.yaml
@@ -41,3 +41,8 @@ flutter:
       web:
         pluginClass: SpeechToTextPlugin
         fileName: speech_to_text_web.dart
+
+  assets:
+    - assets/sounds/speech_to_text_listening.m4r
+    - assets/sounds/speech_to_text_cancel.m4r
+    - assets/sounds/speech_to_text_stop.m4r
