--- a/speech_to_text/pubspec.yaml
+++ b/speech_to_text/pubspec.yaml
@@ -11,8 +11,13 @@ dependencies:
   flutter:
     sdk: flutter
 #  speech_to_text_platform_interface: ^2.0.1
-  speech_to_text_platform_interface:
-    path: ../speech_to_text_platform_interface
+  # speech_to_text_platform_interface:
+  #   path: ../speech_to_text_platform_interface
+  speech_to_text_platform_interface: 
+    git:
+      url: https://github.com/Tiago-Rocha/speech_to_text.git
+      path: speech_to_text_platform_interface
+      ref: main 
   json_annotation: ^4.0.0
   clock: ^1.0.1
   pedantic: ^1.9.2
